# algorithm_playground

./: CMakeLists.txt  binary_search.cpp  binary_search_iterative.cpp  exponential_search.cpp  interpolation_search.cpp  jump_search.cpp  linear_search.cpp  linear_search_improved.cpp  ternary_search.cpp
search/: binary_search_iterative.cpp  linear_search_improved.cpp
sort/: bubble_sort.cpp  bubble_sort_optimized.cpp  insertion_sort.cpp  selection_sort.cpp
